--- a/index.html
+++ b/index.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
 <html lang= "es-ES"> 
+<head>
+    <title>Videojuegos</title>
+    <link rel="stylesheet" href="estilos/estilos.css">
+    <meta charset="UTF-8">
+    <style>
+        h1 {
+            text-align: center;
+        }
+    </style>
+</head>
+<body>
 
-
-
-
-
-
-
-
-
-
-
-
-
+</body>
 </html>
