--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html lang= "es-ES"> 
+<html lang="es-ES">
+
 <head>
     <title>Videojuegos</title>
     <link rel="stylesheet" href="estilos/estilos.css">
@@ -10,7 +11,9 @@
         }
     </style>
 </head>
-<body>
 
+<body>
+    <a href="src/playstation/playstation.html"><img src="img/playstation.jpg" alt="PlayStation"></a>
 </body>
+
 </html>
