--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <a href="src/playstation/playstation.html"><img src="img/playstation.jpg" alt="PlayStation"></a>
+    <a href="src/playstation/playstation.html"><img src="img/playstation.jpg" alt="PlayStation" width="400px" height="400px" ></a>
 </body>
 
 </html>
