juegos play station

--- a/src/playstation/playstation.html
+++ b/src/playstation/playstation.html
@@ -18,9 +18,11 @@
 -->
 
 <body>
-<p>En esta página dedicada exclusivame
+<p>¡Hola! Esta página está dedicada exclusivamente a los juegos más exclusivos de PlayStation 
+    y, en concreto hablaremos de tres de ellos.
 </p>
 
+<a href=""
 
 
 </body>
