--- a/src/nintendo/nintendo.html
+++ b/src/nintendo/nintendo.html
@@ -8,4 +8,14 @@
         
     </style>
 </head>
-</html>
+<body>
+<div>
+    <h1 class="diseñoh">MEJORES VIDEOJUEGOS DE NINTENDO SWITCH</h1>
+    <h2 class="diseñoh">Super Mario Odyssey</h2>
+    <h3 class="diseñoh">The Legend of Zelda</h3>
+    <h4 class="diseñoh">Animal Crossing</h4>
+    
+</div>
+
+
+</body>
