--- a/src/xbox/xbox.html
+++ b/src/xbox/xbox.html
@@ -7,9 +7,17 @@
 </head>
 <body>
 <div>
+<p>
+    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/8c/XBOX_logo_2012.svg/1200px-XBOX_logo_2012.svg.png">
+</p>
     <h1 class="diseñoh">Mejores videojuegos de Xbox</h1>
-    <h2 class="diseñoh">Halo</h2>
-    <h2 class="diseñoh" >ARK 2</h2>
+<p>
+    <h2><a href="src/halo.html" class="diseñoh">Halo</a></h2>
+</p>
+<p>
+    <h2><a href="src/halo.html" class="diseñoh">ARK 2</a></h2>
+</p>
+
     <h2 class="diseñoh">Gears of War</h2>
     <h2 class="diseñoh">Forza Horizon</h2>
 </div>
