--- a/src/playstation/playstation.html
+++ b/src/playstation/playstation.html
@@ -18,11 +18,12 @@
 -->
 
 <body>
-<p>¡Hola! Esta página está dedicada exclusivamente a los juegos más exclusivos de PlayStation 
-    y, en concreto hablaremos de tres de ellos.
-</p>
+    <h1>TITULOS PLAYSTATION</h1>
+    <p>¡Hola! Esta página está dedicada exclusivamente a los juegos más exclusivos de PlayStation
+        y, en concreto hablaremos de tres de ellos.
+    </p>
 
-<a href=""
+    <a href="Bloodborne/Bloodborne.html"><img src="..\..\img\Bloodborne.jpg"></a>
 
 
 </body>
