--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="es-ES">
 
 <head>
-    <title>Videojuegos</title>
+    <title>GameView</title>
     <link rel="stylesheet" href="estilos/estilos.css">
     <meta charset="UTF-8">
     <style>
@@ -13,6 +13,18 @@
 </head>
 
 <body>
+    <h1> GameView </h1> 
+    <p> Los videojuegos son juegos electrónicos que se juegan a través de una pantalla, ya sea en una computadora, consola de juegos, teléfono móvil u otro dispositivo. 
+        Estos juegos pueden ser de diferentes géneros, como aventuras, acción, estrategia, simulación, deportes, entre otros. Los videojuegos suelen tener objetivos y 
+        metas claras, que el jugador debe alcanzar a través de diversas acciones y decisiones dentro del juego. Además, muchos videojuegos también incluyen elementos 
+        de historia, personajes y mundos imaginarios, que pueden hacer que el juego sea más inmersivo y entretenido para el jugador. </p>
+    <p> Hoy en dia hay diversas plataformas para disfrutar de los videojuegos, pero entre las más destacadas podemos encontrar PlayStation, XBOX, Nintendo Switch y, ç
+        la más demandada últimamente, el ordenador </p>
+    <br>
+    <h2> PC </h2> 
+    <p>Los videojuegos de ordenador han sido una parte integral de la cultura gamer durante décadas. Con el avance de la tecnología, los gráficos y la jugabilidad se han vuelto 
+    cada vez más sofisticados, brindando experiencias más inmersivas e interactivas. Los videojuegos de ordenador pueden ser jugados en una variedad de plataformas, 
+    desde computadoras portátiles hasta consolas de juegos, y ofrecen una amplia gama de géneros, incluyendo acción, aventura, estrategia, simulación y más </p>
     <a href="src/playstation/playstation.html"><img src="img/playstation.jpg" alt="PlayStation" 
         width="250px" height="250px"></a>
 </body>
