--- a/index.html
+++ b/index.html
@@ -27,6 +27,8 @@
     desde computadoras portátiles hasta consolas de juegos, y ofrecen una amplia gama de géneros, incluyendo acción, aventura, estrategia, simulación y más </p>
     <a href="src/playstation/playstation.html"><img src="img/playstation.jpg" alt="PlayStation" 
         width="250px" height="250px"></a>
+    
+        <a href="src/xbox/xbox.html"> XBOX </a> 
 </body>
 
 </html>
