--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <a href="src/playstation/playstation.html"><img src="img/playstation.jpg" alt="PlayStation" 
         width="250px" height="250px"></a>
     
-        <a href="src/xbox/xbox.html"> XBOX </a> 
+    <p>  <a href="src/xbox/xbox.html"> XBOX </a> </p>
 </body>
 
 </html>
