--- a/src/playstation/playstation.html
+++ b/src/playstation/playstation.html
@@ -24,6 +24,8 @@
     </p>
 
     <a href="Bloodborne/Bloodborne.html"><img src="..\..\img\Bloodborne.jpg"></a>
+    <a href="Uncharted/Uncharted.html"><img src="..\..\img\uncharted.jpg"></a>
+    <a href="God-of-War/God-of-War.html"><img src="..\..\img\god-of-war.jpg"></a>
 
 
 </body>
