--- a/src/playstation/playstation.html
+++ b/src/playstation/playstation.html
@@ -23,8 +23,9 @@
         y, en concreto hablaremos de tres de ellos.
     </p>
 
-    <a href="Bloodborne/Bloodborne.html"><img src="..\..\img\Bloodborne.jpg"></a>
-    <a href="Uncharted/Uncharted.html"><img src="..\..\img\uncharted.jpg"></a>
+    <a href="Bloodborne/Bloodborne.html"><img src="..\..\img\Bloodborne.jpg" width="100px" 
+        height="300px"></a>
+    <a href="Uncharted/Uncharted.html"><img src="..\..\img\uncharted.jpg" ></a>
     <a href="God-of-War/God-of-War.html"><img src="..\..\img\god-of-war.jpg"></a>
 
 
