--- a/src/playstation/playstation.html
+++ b/src/playstation/playstation.html
@@ -23,10 +23,10 @@
         y, en concreto hablaremos de tres de ellos.
     </p>
 
-    <a href="Bloodborne/Bloodborne.html"><img src="..\..\img\Bloodborne.jpg" width="100px" 
+    <a href="Bloodborne/Bloodborne.html"><img src="..\..\img\Bloodborne.jpg" width="200px" 
         height="300px"></a>
-    <a href="Uncharted/Uncharted.html"><img src="..\..\img\uncharted.jpg" ></a>
-    <a href="God-of-War/God-of-War.html"><img src="..\..\img\god-of-war.jpg"></a>
+    <a href="Uncharted/Uncharted.html"><img src="..\..\img\uncharted.jpg" width="500px" height="300px" ></a>
+    <a href="God-of-War/God-of-War.html"><img src="..\..\img\god-of-war.jpg" width="600px" height="300px"></a>
 
 
 </body>
