--- a/index.html
+++ b/index.html
@@ -27,7 +27,11 @@
     desde computadoras portátiles hasta consolas de juegos, y ofrecen una amplia gama de géneros, incluyendo acción, aventura, estrategia, simulación y más </p>
     <a href="src/playstation/playstation.html"><img src="img/playstation.jpg" alt="PlayStation" 
         width="250px" height="250px"></a>
-    
+    <p>  <a href="src/pc/pc.html"> PC </a> </p>
+    <br>
+
+    <h2> PlayStation </h2>
+    <p> 
     <p>  <a href="src/xbox/xbox.html"> XBOX </a> </p>
 </body>
 
