enlace estilos bien

--- a/src/playstation/God-of-War/God-of-War.html
+++ b/src/playstation/God-of-War/God-of-War.html
@@ -3,7 +3,7 @@
 
 <head>
     <title>God of War</title>
-    <link rel="stylesheet" href="..\..\estilos\estilos.css">
+    <link rel="stylesheet" href="..\..\..\estilos\estilos.css">
     <meta charset="UTF-8">
     <style>
         h1 {
