--- a/src/playstation/playstation.html
+++ b/src/playstation/playstation.html
@@ -20,7 +20,7 @@
 <body>
     <h1>TITULOS PLAYSTATION</h1>
     <p>¡Hola! Esta página está dedicada exclusivamente a los juegos más exclusivos de PlayStation
-        y, en concreto hablaremos de tres de ellos.
+        y, en concreto, hablaremos de tres de ellos.
     </p>
 
     <a href="Bloodborne/Bloodborne.html"><img src="..\..\img\Bloodborne.jpg" width="200px" height="300px"></a>
