--- a/index.html
+++ b/index.html
@@ -31,7 +31,10 @@
     <br>
 
     <h2> PlayStation </h2>
-    <p> 
+    <p> Los videojuegos de PlayStation 4 han sido una de las experiencias más emocionantes en la historia de los juegos. Con su potente hardware, gráficos impresionantes 
+        y una amplia variedad de títulos exclusivos, PlayStation 4 ha sido una plataforma popular para los amantes de los videojuegos. Desde aventuras épicas como God of 
+        War y Uncharted 4 hasta juegos de rol como Persona 5 y Final Fantasy XV, PlayStation 4 ha ofrecido a los jugadores una experiencia de juego única e inolvidable </p>
+        
     <p>  <a href="src/xbox/xbox.html"> XBOX </a> </p>
 </body>
 
