--- a/src/xbox/xbox.html
+++ b/src/xbox/xbox.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title> Xbox </title>
-    <link rel="stylesheet" href="..\estilos\estilos.css">    
+    <link rel="stylesheet" href="..\..\estilos\estilos.css">    
 </head>
 <body>
 <div>
