--- a/index.html
+++ b/index.html
@@ -25,8 +25,7 @@
     <p>Los videojuegos de ordenador han sido una parte integral de la cultura gamer durante décadas. Con el avance de la tecnología, los gráficos y la jugabilidad se han vuelto 
     cada vez más sofisticados, brindando experiencias más inmersivas e interactivas. Los videojuegos de ordenador pueden ser jugados en una variedad de plataformas, 
     desde computadoras portátiles hasta consolas de juegos, y ofrecen una amplia gama de géneros, incluyendo acción, aventura, estrategia, simulación y más </p>
-    <a href="src/playstation/playstation.html"><img src="img/playstation.jpg" alt="PlayStation" 
-        width="250px" height="250px"></a>
+
     <p>  <a href="src/pc/pc.html"> PC </a> </p>
     <br>
 
@@ -34,8 +33,13 @@
     <p> Los videojuegos de PlayStation 4 han sido una de las experiencias más emocionantes en la historia de los juegos. Con su potente hardware, gráficos impresionantes 
         y una amplia variedad de títulos exclusivos, PlayStation 4 ha sido una plataforma popular para los amantes de los videojuegos. Desde aventuras épicas como God of 
         War y Uncharted 4 hasta juegos de rol como Persona 5 y Final Fantasy XV, PlayStation 4 ha ofrecido a los jugadores una experiencia de juego única e inolvidable </p>
-        
+        <a href="src/playstation/playstation.html"><img src="img/playstation.jpg" alt="PlayStation" 
+            width="250px" height="250px"></a>
+            <p>  <a href="src/playstation/playstation.html"> PlayStation 4 </a> </p>
+
+
     <p>  <a href="src/xbox/xbox.html"> XBOX </a> </p>
+    <p>  <a href="src/nintendo/nintendo.html"> Nintendo Switch </a> </p>
 </body>
 
 </html>
