--- a/src/nintendo/nintendo.html
+++ b/src/nintendo/nintendo.html
@@ -5,7 +5,9 @@
     <link rel="stylesheet" href="..\..\estilos\estilos.css">
     <meta charset="UTF-8">
     <style>
-        
+        h1 {
+            text-align: center;
+        }
     </style>
 </head>
 <body>
@@ -14,7 +16,7 @@
     <h2 class="diseñoh">Super Mario Odyssey</h2>
     <h3 class="diseñoh">The Legend of Zelda</h3>
     <h4 class="diseñoh">Animal Crossing</h4>
-    
+
 </div>
 
 
