--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         Estos juegos pueden ser de diferentes géneros, como aventuras, acción, estrategia, simulación, deportes, entre otros. Los videojuegos suelen tener objetivos y 
         metas claras, que el jugador debe alcanzar a través de diversas acciones y decisiones dentro del juego. Además, muchos videojuegos también incluyen elementos 
         de historia, personajes y mundos imaginarios, que pueden hacer que el juego sea más inmersivo y entretenido para el jugador. </p>
-    <p> Hoy en dia hay diversas plataformas para disfrutar de los videojuegos, pero entre las más destacadas podemos encontrar PlayStation, XBOX, Nintendo Switch y, 
+    <p> Hoy en dia hay diversas plataformas para disfrutar de los videojuegos, pero entre las más destacadas podemos encontrar PlayStation, XBOX, Nintendo Switch y, ç
         la más demandada últimamente, el ordenador </p>
     <br>
     <h2> PC </h2> 
