--- a/src/xbox/xbox.html
+++ b/src/xbox/xbox.html
@@ -13,13 +13,13 @@
 </p>
     <h1 class="diseñoh">Mejores videojuegos de Xbox</h1>
 <p>
-    <h2 class="diseñoh"><a href="Halo/halo.html" class="diseñoh">Halo</a></h2>
+    <h2 class="diseñoh"><a href="Halo/halo.html">Halo</a></h2>
 </p>
 <p>
-    <h2 class="diseñoh"><a href="ARK 2/Ark2.html" class="diseñoh">ARK 2</a></h2>
+    <h2 class="diseñoh"><a href="ARK 2/Ark2.html">ARK 2</a></h2>
 </p>
 <p>
-    <h2 class="diseñoh"><a href="Gearsofwar/gearsofwar.html" class="diseñoh">Gears of War</a></h2>
+    <h2 class="diseñoh"><a href="Gearsofwar/gearsofwar.html">Gears of War</a></h2>
 </p>
 </div>
 </body>
