--- a/src/playstation/Bloodborne/Bloodborne.html
+++ b/src/playstation/Bloodborne/Bloodborne.html
@@ -13,7 +13,17 @@
 </head>
 
 <body>
-
+    <h1>BLOODBORNE</h1>
+    <img src="..\..\..\img\bloodborne-para-su-pagina.jpg">
+    <p>
+        Bloodborne es un videojuego de rol de acción dirigido por Hidetaka Miyazaki, desarrollado
+        por From Software y JapanStudio distribuido por Sony Computer Entertainment para la plataforma de PlayStation
+        El videojuego sigue las acciones del personaje del jugador, el Cazador, a través de Yharnam, una ciudad
+        ficticia de estilo victoriano, cuyos habitantes han sido afectados con una enfermedad de transmisión sanguínea
+        anormal. Al despertar en Yharnam durante la noche de «la caza» tras recibir un tratamiento de la conocida
+        «sangre milagrosa», el Cazador busca algo conocido solo como paleblood ("sangre pálida" en español) para
+        terminar la cacería.
+    </p>
 
 
 </body>
