--- a/src/xbox/xbox.html
+++ b/src/xbox/xbox.html
@@ -13,7 +13,7 @@
 </p>
     <h1 class="diseñoh">Mejores videojuegos de Xbox</h1>
 <p>
-    <h2 class="diseñoh"><a href="Halo/halo.html">Halo</a></h2>
+    <h2 class="diseñoh"><a href="Halo/Halo.html">Halo</a></h2>
 </p>
 <p>
     <h2 class="diseñoh"><a href="ARK 2/Ark2.html">ARK 2</a></h2>
