--- a/index.html
+++ b/index.html
@@ -35,10 +35,23 @@
         War y Uncharted 4 hasta juegos de rol como Persona 5 y Final Fantasy XV, PlayStation 4 ha ofrecido a los jugadores una experiencia de juego única e inolvidable </p>
         <a href="src/playstation/playstation.html"><img src="img/playstation.jpg" alt="PlayStation" 
             width="250px" height="250px"></a>
-            <p>  <a href="src/playstation/playstation.html"> PlayStation 4 </a> </p>
+    
+        <br>
 
-
+    <h2> XBOX </h2>
+        <p>Los videojuegos de Xbox One han sido una opción popular para los amantes de los juegos de consola. Con su potente hardware, gráficos impresionantes y una amplia 
+            variedad de títulos exclusivos, Xbox One ha ofrecido una experiencia de juego única y emocionante. Desde juegos de acción en primera persona como Halo 5: Guardians
+            y Gears of War 4 hasta juegos de carreras como Forza Horizon 4 y simuladores de deportes como FIFA 19, Xbox One ha ofrecido una amplia variedad de géneros y 
+            experiencias de juego para los jugadores. </p>
+            
     <p>  <a href="src/xbox/xbox.html"> XBOX </a> </p>
+
+    <h2>Nintendo Switch</h2>
+    <p>Los videojuegos de Nintendo Switch han sido una experiencia emocionante para los jugadores de todas las edades. La consola híbrida ofrece una experiencia única al
+        permitir a los jugadores disfrutar de los juegos tanto en modo portátil como en modo de sobremesa. Con una amplia gama de títulos exclusivos, desde los juegos 
+        clásicos como Mario y Zelda, hasta los nuevos juegos como Animal Crossing: New Horizons y Splatoon 2, Nintendo Switch ha ofrecido una experiencia de juego única e 
+        inolvidable</p>
+
     <p>  <a href="src/nintendo/nintendo.html"> Nintendo Switch </a> </p>
 </body>
 
