--- a/src/playstation/Uncharted/Uncharted.html
+++ b/src/playstation/Uncharted/Uncharted.html
@@ -10,4 +10,26 @@
             text-align: center;
         }
     </style>
-    </head>
+</head>
+
+<body>
+    <h1>UNCHARTED</h1>
+    <img src="..\..\..\img\uncharted_header.jpg">
+    <p>
+        La trilogía original fue desarrollada enteramente por Naughty Dog en exclusiva para la consola PlayStation 3,
+        fue una de las trilogías principales de dicha consola y rápidamente se convirtió en el emblema y buque insignia
+        de dicha consola, logrando ser considerada uno de los juegos principales que impulsaban las ventas del sistema.
+        La saga se enfoca en un personaje llamado Nathan Drake un aventurero caza tesoros que, a lo largo de los juegos,
+        se embarca en diferentes aventuras junto a su fiel amigo y socio Victor Sullivan y sus intereses amorosos Elena
+        Fisher y Chloe Frazer.
+
+        El sistema de juego en la serie Uncharted es una combinación de elementos de acción y aventura y plataformas en
+        3D con una perspectiva en tercera persona. Al jugador se le asignan varias tareas físicas que deben completarse
+        para progresar a través de la historia, como saltar, nadar, agarrar y moverse a lo largo de las repisas, y subir
+        y columpiarse con cuerdas. Otros aspectos, como disparar, combatir y resolver acertijos también se presentan
+        regularmente. En títulos posteriores, se agregaron o desarrollaron acciones de conducción, paseos en bote y
+        otras acciones acrobáticas. La característica más importante en el sistema de juego de Uncharted es que el
+        jugador controla al personaje, a través de la vista de tercera persona situada en los hombros de dicho
+        personaje.
+    </p>
+</body>
