--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
     <p>Los videojuegos de ordenador han sido una parte integral de la cultura gamer durante décadas. Con el avance de la tecnología, los gráficos y la jugabilidad se han vuelto 
     cada vez más sofisticados, brindando experiencias más inmersivas e interactivas. Los videojuegos de ordenador pueden ser jugados en una variedad de plataformas, 
     desde computadoras portátiles hasta consolas de juegos, y ofrecen una amplia gama de géneros, incluyendo acción, aventura, estrategia, simulación y más </p>
-
-    <p>  <a href="src/pc/pc.html"> PC </a> </p>
+        <a href="src/playstation/playstation.html"><img src="img/playstation.jpg" alt="PlayStation" 
+            width="250px" height="250px"></a>
     <br>
 
     <h2> PlayStation </h2>
@@ -35,24 +35,25 @@
         War y Uncharted 4 hasta juegos de rol como Persona 5 y Final Fantasy XV, PlayStation 4 ha ofrecido a los jugadores una experiencia de juego única e inolvidable </p>
         <a href="src/playstation/playstation.html"><img src="img/playstation.jpg" alt="PlayStation" 
             width="250px" height="250px"></a>
-    
-        <br>
+    <br>
 
     <h2> XBOX </h2>
         <p>Los videojuegos de Xbox One han sido una opción popular para los amantes de los juegos de consola. Con su potente hardware, gráficos impresionantes y una amplia 
             variedad de títulos exclusivos, Xbox One ha ofrecido una experiencia de juego única y emocionante. Desde juegos de acción en primera persona como Halo 5: Guardians
             y Gears of War 4 hasta juegos de carreras como Forza Horizon 4 y simuladores de deportes como FIFA 19, Xbox One ha ofrecido una amplia variedad de géneros y 
             experiencias de juego para los jugadores. </p>
-            
-    <p>  <a href="src/xbox/xbox.html"> XBOX </a> </p>
+        <a href="src/playstation/playstation.html"><img src="img/playstation.jpg" alt="PlayStation" 
+                width="250px" height="250px"></a>
+    <br>
 
     <h2>Nintendo Switch</h2>
     <p>Los videojuegos de Nintendo Switch han sido una experiencia emocionante para los jugadores de todas las edades. La consola híbrida ofrece una experiencia única al
         permitir a los jugadores disfrutar de los juegos tanto en modo portátil como en modo de sobremesa. Con una amplia gama de títulos exclusivos, desde los juegos 
         clásicos como Mario y Zelda, hasta los nuevos juegos como Animal Crossing: New Horizons y Splatoon 2, Nintendo Switch ha ofrecido una experiencia de juego única e 
         inolvidable</p>
+        <a href="src/playstation/playstation.html"><img src="img/playstation.jpg" alt="PlayStation" 
+            width="250px" height="250px"></a>
 
-    <p>  <a href="src/nintendo/nintendo.html"> Nintendo Switch </a> </p>
 </body>
 
 </html>
