--- a/src/playstation/God-of-War/God-of-War.html
+++ b/src/playstation/God-of-War/God-of-War.html
@@ -14,7 +14,7 @@
 
 <body>
     <h1>GOD OF WAR</h1>
-    <img src="..\..\..\img\god-of-war-para-su-pagina.jpg">
+    <img src="..\..\..\img\god-of-war-para-su-pagina.jpg" width="600px" height="300px">
     <p>
         God of War es una franquicia de videojuegos hack and slash creada por SCE Santa Monica Studio y distribuida por
         Sony Computer Entertainment. Se basa en las aventuras de un semidiós espartano, Kratos, quien se enfrenta a
