--- a/src/xbox/xbox.html
+++ b/src/xbox/xbox.html
@@ -13,13 +13,13 @@
 </p>
     <h1 class="diseñoh">Mejores videojuegos de Xbox</h1>
 <p>
-    <h2 class="diseñoh"><a href="Halo/Halo.html">Halo</a></h2>
+    <h2 class="diseñoh"><a href="Halo/Halo.html"><img src="https://assets-prd.ignimgs.com/2022/01/04/haloreach-1641338856260.jpg" width="100" height="100"></a></h2>
 </p>
 <p>
-    <h2 class="diseñoh"><a href="ARK 2/Ark2.html">ARK 2</a></h2>
+    <h2 class="diseñoh"><a href="ARK 2/Ark2.html"><img src="https://store-images.s-microsoft.com/image/apps.52261.14036931078975578.35527dd4-bd1c-43d9-90ff-3a801a47df6a.d5645ab8-82fd-46e0-b961-9fc179d12fe4" width="100" height="100"></a></h2>
 </p>
 <p>
-    <h2 class="diseñoh"><a href="Gearsofwar/gearsofwar.html">Gears of War</a></h2>
+    <h2 class="diseñoh"><a href="Gearsofwar/gearsofwar.html"><img src="data:image/gif;base64,R0lGODlhAQABAIAAAP///////yH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==" width="100" height="100"></a></h2>
 </p>
 </div>
 </body>
