--- a/src/playstation/playstation.html
+++ b/src/playstation/playstation.html
@@ -22,17 +22,26 @@
     <p>¡Hola! Esta página está dedicada exclusivamente a los juegos más exclusivos de PlayStation
         y, en concreto, hablaremos de tres de ellos.
     </p>
-<table>
-    <tr>
-    <td><a href="Bloodborne/Bloodborne.html"><img src="..\..\img\Bloodborne.jpg" width="200px" height="300px"></a></td>
-    </tr>
-    <tr>
-    <td><a href="Uncharted/Uncharted.html"><img src="..\..\img\uncharted.jpg" width="500px" height="300px"></a></td>
-    </tr>
-    <tr>
-    <td><a href="God-of-War/God-of-War.html"><img src="..\..\img\god-of-war.jpg" width="600px" height="300px"></a></td>
-    </tr>
-</table>
+
+    <table>
+        <tr>
+            <thead>Bloodborne</thead>
+            <thead>Uncharted</thead>
+            <thead>God of War</thead>
+        </tr>
+        <tr>
+            <td><a href="Bloodborne/Bloodborne.html"><img src="..\..\img\Bloodborne.jpg" width="200px"
+                        height="300px"></a></td>
+        </tr>
+        <tr>
+            <td><a href="Uncharted/Uncharted.html"><img src="..\..\img\uncharted.jpg" width="500px" height="300px"></a>
+            </td>
+        </tr>
+        <tr>
+            <td><a href="God-of-War/God-of-War.html"><img src="..\..\img\god-of-war.jpg" width="600px"
+                        height="300px"></a></td>
+        </tr>
+    </table>
 
 </body>
 
