--- a/src/playstation/playstation.html
+++ b/src/playstation/playstation.html
@@ -24,11 +24,13 @@
     </p>
 
     <table>
+        <thead>
         <tr>
-            <thead>Bloodborne</thead>
-            <thead>Uncharted</thead>
-            <thead>God of War</thead>
+            <th>Bloodborne</th>
+            <th>Uncharted</th>
+            <th>God of War</th>
         </tr>
+    </thead>
         <tr>
             <td><a href="Bloodborne/Bloodborne.html"><img src="..\..\img\Bloodborne.jpg" width="200px"
                         height="300px"></a></td>
