--- a/src/playstation/playstation.html
+++ b/src/playstation/playstation.html
@@ -25,24 +25,27 @@
 
     <table>
         <thead>
-        <tr>
-            <th>Bloodborne</th>
-            <th>Uncharted</th>
-            <th>God of War</th>
-        </tr>
-    </thead>
-        <tr>
-            <td><a href="Bloodborne/Bloodborne.html"><img src="..\..\img\Bloodborne.jpg" width="200px"
-                        height="300px"></a></td>
-        </tr>
-        <tr>
-            <td><a href="Uncharted/Uncharted.html"><img src="..\..\img\uncharted.jpg" width="500px" height="300px"></a>
-            </td>
-        </tr>
-        <tr>
-            <td><a href="God-of-War/God-of-War.html"><img src="..\..\img\god-of-war.jpg" width="600px"
-                        height="300px"></a></td>
-        </tr>
+            <tr>
+                <th>Bloodborne</th>
+                <th>Uncharted</th>
+                <th>God of War</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td><a href="Bloodborne/Bloodborne.html"><img src="..\..\img\Bloodborne.jpg" width="200px"
+                            height="300px"></a></td>
+            </tr>
+            <tr>
+                <td><a href="Uncharted/Uncharted.html"><img src="..\..\img\uncharted.jpg" width="500px"
+                            height="300px"></a>
+                </td>
+            </tr>
+            <tr>
+                <td><a href="God-of-War/God-of-War.html"><img src="..\..\img\god-of-war.jpg" width="600px"
+                            height="300px"></a></td>
+            </tr>
+        </tbody>
     </table>
 
 </body>
