--- a/src/playstation/playstation.html
+++ b/src/playstation/playstation.html
@@ -24,6 +24,7 @@
     </p>
 
     <table>
+        <caption>¡Los tres juegos exclusivos mejor valorados!</caption>
         <thead>
             <tr>
                 <th>Bloodborne</th>
