--- a/src/playstation/playstation.html
+++ b/src/playstation/playstation.html
@@ -24,7 +24,7 @@
     </p>
 
     <table>
-        <caption>¡Los tres juegos exclusivos mejor valorados!</caption>
+        <caption><b>¡Los tres juegos exclusivos mejor valorados!</b></caption>
         <thead>
             <tr>
                 <th>Bloodborne</th>
