--- a/src/nintendo/nintendo.html
+++ b/src/nintendo/nintendo.html
@@ -13,9 +13,18 @@
 <body>
 <div>
     <h1 class="diseñoh">MEJORES VIDEOJUEGOS DE NINTENDO SWITCH</h1>
-    <h2 class="diseñoh">Super Mario Odyssey</h2>
-    <h3 class="diseñoh">The Legend of Zelda</h3>
-    <h4 class="diseñoh">Animal Crossing</h4>
+<p>
+    <img src=
+</p>
+<p>
+<a href="Super Mario Odyssey"><img src=></a>
+</p>
+<p>
+<a href="The legend of Zelda"><img src=></a>
+</p>
+<p>
+<a href="Animal Crossing"><img src=></a>
+</p>
 
 </div>
 
