--- a/src/playstation/Bloodborne/Bloodborne.html
+++ b/src/playstation/Bloodborne/Bloodborne.html
@@ -14,7 +14,7 @@
 
 <body>
     <h1>BLOODBORNE</h1>
-    <img src="..\..\..\img\bloodborne-para-su-pagina.jpg">
+    <div style="text-align: center;"><img src="..\..\..\img\bloodborne-para-su-pagina.jpg"></div>
     <p>
         Bloodborne es un videojuego de rol de acción dirigido por Hidetaka Miyazaki, desarrollado
         por From Software y JapanStudio distribuido por Sony Computer Entertainment para la plataforma de PlayStation
