--- a/src/playstation/Uncharted/Uncharted.html
+++ b/src/playstation/Uncharted/Uncharted.html
@@ -14,7 +14,7 @@
 
 <body>
     <h1>UNCHARTED</h1>
-    <img src="..\..\..\img\uncharted_header.jpg" width="500px" height="300px">
+    <div style="text-align: center;"><img src="..\..\..\img\uncharted_header.jpg" width="500px" height="300px"></div>
     <p>
         La trilogía original fue desarrollada enteramente por Naughty Dog en exclusiva para la consola PlayStation 3,
         fue una de las trilogías principales de dicha consola y rápidamente se convirtió en el emblema y buque insignia
