--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <p>Los videojuegos de ordenador han sido una parte integral de la cultura gamer durante décadas. Con el avance de la tecnología, los gráficos y la jugabilidad se han vuelto 
     cada vez más sofisticados, brindando experiencias más inmersivas e interactivas. Los videojuegos de ordenador pueden ser jugados en una variedad de plataformas, 
     desde computadoras portátiles hasta consolas de juegos, y ofrecen una amplia gama de géneros, incluyendo acción, aventura, estrategia, simulación y más </p>
-        <a href="src/playstation/playstation.html"><img src="img/playstation.jpg" alt="PlayStation" 
+        <a href="src/playstation/playstation.html"><img src="img/Windows-Logo-1.png" alt="PC" 
             width="250px" height="250px"></a>
     <br>
 
@@ -42,7 +42,7 @@
             variedad de títulos exclusivos, Xbox One ha ofrecido una experiencia de juego única y emocionante. Desde juegos de acción en primera persona como Halo 5: Guardians
             y Gears of War 4 hasta juegos de carreras como Forza Horizon 4 y simuladores de deportes como FIFA 19, Xbox One ha ofrecido una amplia variedad de géneros y 
             experiencias de juego para los jugadores. </p>
-        <a href="src/playstation/playstation.html"><img src="img/playstation.jpg" alt="PlayStation" 
+        <a href="src/playstation/playstation.html"><img src="img/xboxlogo.jpg" alt="Xbox" 
                 width="250px" height="250px"></a>
     <br>
 
@@ -51,7 +51,7 @@
         permitir a los jugadores disfrutar de los juegos tanto en modo portátil como en modo de sobremesa. Con una amplia gama de títulos exclusivos, desde los juegos 
         clásicos como Mario y Zelda, hasta los nuevos juegos como Animal Crossing: New Horizons y Splatoon 2, Nintendo Switch ha ofrecido una experiencia de juego única e 
         inolvidable</p>
-        <a href="src/playstation/playstation.html"><img src="img/playstation.jpg" alt="PlayStation" 
+        <a href="src/playstation/playstation.html"><img src="img/logonintendo.jpg" alt="Nintendo Switch" 
             width="250px" height="250px"></a>
 
 </body>
