--- a/src/xbox/xbox.html
+++ b/src/xbox/xbox.html
@@ -6,20 +6,27 @@
     <link rel="stylesheet" href="..\..\estilos\estilos.css">    
 </head>
 <body>
-<div>
-    <h1 class="diseñoh">MEJORES VIDEOJUEGOS DE XBOX</h1>
-<p>
-    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/8c/XBOX_logo_2012.svg/1200px-XBOX_logo_2012.svg.png" width="650" height="225">
-</p>
-    <h1 class="diseñoh">Mejores videojuegos de Xbox</h1>
-<p>
-    <h2 class="diseñoh"><a href="Halo/Halo.html"><img src="https://assets-prd.ignimgs.com/2022/01/04/haloreach-1641338856260.jpg" width="300" height="300"></a></h2>
-</p>
-<p>
-<a href="ARK 2/Ark2.html"><img src="https://store-images.s-microsoft.com/image/apps.52261.14036931078975578.35527dd4-bd1c-43d9-90ff-3a801a47df6a.d5645ab8-82fd-46e0-b961-9fc179d12fe4" width="300" height="300"></a></h2>
-</p>
-<p>
-<a href="Gearsofwar/gearsofwar.html"><img src="data:image/gif;base64,R0lGODlhAQABAIAAAP///////yH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==" width="300" height="300"></a></h2>
-</p>
-</div>
+    <table>
+        <caption><b>mejores juegos xbox</b></caption>
+        <thead>
+            <tr>
+                <th>ARK 2</th>
+                <th>Gearsofwar</th>
+                <th>Halo</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td><a href="ARK 2/Ark2.html"><img src="https://cdn1.epicgames.com/salesEvent/salesEvent/EGS_ARKUltimateSurvivorEdition_StudioWildcard_Bundles_S1_2560x1440-9271500d584d8d0f075828975a10e00e"
+                     width="200px" height="300px"></a></td>
+
+                <td><a href="Gearsofwar/gearsofwar.html"><img src="https://static.wikia.nocookie.net/gearsofwar/images/8/87/Gears_of_War_2_Portada.png/revision/latest?cb=20160706021554&path-prefix=es" 
+                    width="500px"  height="300px"></a>
+                </td>
+
+                <td><a href="Halo/Halo.html"><img src="https://cdn.akamai.steamstatic.com/steam/apps/1240440/capsule_616x353.jpg?t=1678399532" 
+                    width="550px"  height="300px"></a></td>
+            </tr>
+        </tbody>
+    </table>
 </body>
