--- a/src/xbox/xbox.html
+++ b/src/xbox/xbox.html
@@ -6,8 +6,9 @@
     <link rel="stylesheet" href="..\..\estilos\estilos.css">    
 </head>
 <body>
+    <h1>MEJORES JUEGOS XBOX</h1>
     <table>
-        <caption><b>mejores juegos xbox</b></caption>
+        <caption><b>Exclusivos xbox</b></caption>
         <thead>
             <tr>
                 <th>ARK 2</th>
@@ -18,14 +19,14 @@
         <tbody>
             <tr>
                 <td><a href="ARK 2/Ark2.html"><img src="https://cdn1.epicgames.com/salesEvent/salesEvent/EGS_ARKUltimateSurvivorEdition_StudioWildcard_Bundles_S1_2560x1440-9271500d584d8d0f075828975a10e00e"
-                     width="200px" height="300px"></a></td>
+                     width=400 height=300></a></td>
 
                 <td><a href="Gearsofwar/gearsofwar.html"><img src="https://static.wikia.nocookie.net/gearsofwar/images/8/87/Gears_of_War_2_Portada.png/revision/latest?cb=20160706021554&path-prefix=es" 
-                    width="500px"  height="300px"></a>
+                    width=400  height=300></a>
                 </td>
 
                 <td><a href="Halo/Halo.html"><img src="https://cdn.akamai.steamstatic.com/steam/apps/1240440/capsule_616x353.jpg?t=1678399532" 
-                    width="550px"  height="300px"></a></td>
+                    width=400  height=300></a></td>
             </tr>
         </tbody>
     </table>
