--- a/src/xbox/Halo/Halo.html
+++ b/src/xbox/Halo/Halo.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title> Halo </title>
-    <link rel="stylesheet" href="..\..\estilos\estilos.css">    
+    <link rel="stylesheet" href="..\..\..\estilos\estilos.css">    
 </head>
 <body>
 <div>
