--- a/src/xbox/xbox.html
+++ b/src/xbox/xbox.html
@@ -21,7 +21,7 @@
                 <td><a href="ARK 2/Ark2.html"><img src="https://cdn1.epicgames.com/salesEvent/salesEvent/EGS_ARKUltimateSurvivorEdition_StudioWildcard_Bundles_S1_2560x1440-9271500d584d8d0f075828975a10e00e"
                      width=400 height=300></a></td>
 
-                <td><a href="Gearsofwar/gearsofwar.html"><img src="https://static.wikia.nocookie.net/gearsofwar/images/8/87/Gears_of_War_2_Portada.png/revision/latest?cb=20160706021554&path-prefix=es" 
+                <td><a href="Gearsofwar/gearsofwar.html"><img src="https://m.media-amazon.com/images/I/71dKe4mYccL._SL1000_.jpg" 
                     width=400  height=300></a>
                 </td>
 
