--- a/src/xbox/ARK 2/Ark2.html
+++ b/src/xbox/ARK 2/Ark2.html
@@ -25,5 +25,7 @@
     las estructuras de construcción generalmente se comparten entre los miembros. 
     Hay un JcEmodo en el que los jugadores no pueden luchar entre sí a menos que 
     se active un evento de guerra específico acordado por ambas partes.</p>
+
+<img src="https://cdn.akamai.steamstatic.com/steam/apps/2050420/capsule_616x353.jpg?t=1655250428" width="616" height="353">
 </div>
 </body>
