--- a/src/xbox/Gearsofwar/gearsofwar.html
+++ b/src/xbox/Gearsofwar/gearsofwar.html
@@ -22,5 +22,6 @@ multijugador del juego permite que hasta ocho jugadores controlen personajes
 de una de las dos facciones en una variedad de modos de juego en línea. 
 El juego presenta jugadores que usan cobertura y fuego estratégico para 
 ganar batallas.</p>
+<img src="https://assets.xboxservices.com/assets/2b/42/2b42b33c-cc7f-4162-9eaa-48e5cc88e6fe.jpg?n=GoW4-MWF_Hero-0_1083x609.jpg" width="616" height="353">
 </div>
 </body>
