--- a/src/xbox/Halo/Halo.html
+++ b/src/xbox/Halo/Halo.html
@@ -33,5 +33,6 @@
     se le denomina Halo Nation. Gracias a esto Halo ha formado parte con gran 
     rapidez de la cultura popular estadounidense, ya que ha sido referida en 
     multitud de medios como cómics, libros, novelas gráficas, música, y cortometrajes.</p>
+    <img src="https://i.blogs.es/4359ad/halo-la-serie/1366_2000.png" width="616" height="353"> 
 </div>
 </body>
