--- a/src/xbox/xbox.html
+++ b/src/xbox/xbox.html
@@ -6,28 +6,27 @@
     <link rel="stylesheet" href="..\..\estilos\estilos.css">    
 </head>
 <body>
-    <h1>MEJORES JUEGOS XBOX</h1>
-    <table>
-        <caption><b>Exclusivos xbox</b></caption>
-        <thead>
-            <tr>
-                <th>ARK 2</th>
-                <th>Gearsofwar</th>
-                <th>Halo</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr>
-                <td><a href="ARK 2/Ark2.html"><img src="https://cdn1.epicgames.com/salesEvent/salesEvent/EGS_ARKUltimateSurvivorEdition_StudioWildcard_Bundles_S1_2560x1440-9271500d584d8d0f075828975a10e00e"
-                     width=400 height=300></a></td>
+<h1>h1>MEJORES JUEGOS XBOX</h1>
+  <table>
+    <caption><b>Exclusivos xbox</b></caption>
+    <thead>
+      <tr>
+        <th>ARK 2</th>
+        <th>Gearsofwar</th>
+        <th>Halo</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td><a href="ARK 2/Ark2.html"><img src="https://cdn1.epicgames.com/salesEvent/salesEvent/EGS_ARKUltimateSurvivorEdition_StudioWildcard_Bundles_S1_2560x1440-9271500d584d8d0f075828975a10e00e"
+        width=400 height=300></a></td>
 
-                <td><a href="Gearsofwar/gearsofwar.html"><img src="https://m.media-amazon.com/images/I/71dKe4mYccL._SL1000_.jpg" 
-                    width=400  height=300></a>
-                </td>
+        <td><a href="Gearsofwar/gearsofwar.html"><img src="https://m.media-amazon.com/images/I/71dKe4mYccL._SL1000_.jpg" 
+        width=400  height=300></a></td>
 
-                <td><a href="Halo/Halo.html"><img src="https://cdn.akamai.steamstatic.com/steam/apps/1240440/capsule_616x353.jpg?t=1678399532" 
-                    width=400  height=300></a></td>
-            </tr>
-        </tbody>
-    </table>
+        <td><a href="Halo/Halo.html"><img src="https://cdn.akamai.steamstatic.com/steam/apps/1240440/capsule_616x353.jpg?t=1678399532" 
+        width=400  height=300></a></td>
+      </tr>
+    </tbody>
+  </table>
 </body>
