--- a/src/xbox/xbox.html
+++ b/src/xbox/xbox.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="..\..\estilos\estilos.css">    
 </head>
 <body>
-<h1>h1>MEJORES JUEGOS XBOX</h1>
+<h1>MEJORES JUEGOS XBOX</h1>
   <table>
     <caption><b>Exclusivos xbox</b></caption>
     <thead>
