--- a/src/nintendo/nintendo.html
+++ b/src/nintendo/nintendo.html
@@ -11,11 +11,22 @@
     </style>
 </head>
 <body>
-<div>
-    <h1 class="diseñoh">MEJORES VIDEOJUEGOS DE NINTENDO SWITCH</h1>
-<p>
-    <img src=
-</p>
+<h1 class="diseñoh">MEJORES VIDEOJUEGOS DE NINTENDO SWITCH</h1>
+    <table>
+        <caption><b>Exclusivos Nintendo Switch</b></caption>
+        <thead>
+            <tr>
+                <th>Super Mario Odyssey</th>
+                <th>The Legend of Zelda</th>
+                <th>Animal Crossing</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td><a href="</td>
+            </tr>
+        </tbody>
+    </table>
 <p>
 <a href="Super Mario Odyssey"><img src=></a>
 </p>
