--- a/src/nintendo/nintendo.html
+++ b/src/nintendo/nintendo.html
@@ -16,28 +16,22 @@
         <caption><b>Exclusivos Nintendo Switch</b></caption>
         <thead>
             <tr>
+                <th>Animal Crossing</th>
                 <th>Super Mario Odyssey</th>
                 <th>The Legend of Zelda</th>
-                <th>Animal Crossing</th>
             </tr>
         </thead>
         <tbody>
             <tr>
-                <td><a href="</td>
+                <td><a href="Animal Crossing/AnimalCrossing.html"><img src=""
+                width=400 height=300></a></td>
+                
+                <td><a href="Super Mario Odyssey/SuperMarioOdyssey.html"><img src=""
+                width=400 height=300></a></td>
+
+                <td><a href="The Legend of Zelda/TheLegendofZelda.html"><img src=""
+                width=400 height=300></a></td>
             </tr>
         </tbody>
     </table>
-<p>
-<a href="Super Mario Odyssey"><img src=></a>
-</p>
-<p>
-<a href="The legend of Zelda"><img src=></a>
-</p>
-<p>
-<a href="Animal Crossing"><img src=></a>
-</p>
-
-</div>
-
-
 </body>
