--- a/src/nintendo/Animal Crossing/AnimalCrossing.html
+++ b/src/nintendo/Animal Crossing/AnimalCrossing.html
@@ -30,6 +30,6 @@
        son puntuadas por la Academia de Artes Decorativas (AAD) todos los domingos. Los jugadores tienen la opción de recibir o no recibir cartas
         de la ADD al inicio del juego, pero una vez que acepta, no se puede revocar esta decisión. Desde el lanzamiento de la versión para móviles,
          se permite a los jugadores conseguir dinero rápidamente.</p>
-<img src="">
+<img src="" width="616" height="353">
 </div>
 </body>
