--- a/src/nintendo/nintendo.html
+++ b/src/nintendo/nintendo.html
@@ -23,7 +23,7 @@
         </thead>
         <tbody>
             <tr>
-                <td><a href="Animal Crossing/AnimalCrossing.html"><img src=""
+                <td><a href="Animal Crossing/AnimalCrossing.html"><img src="https://m.media-amazon.com/images/I/71+75r1WyQL.jpg"
                 width=400 height=300></a></td>
                 
                 <td><a href="Super Mario Odyssey/SuperMarioOdyssey.html"><img src=""
