--- a/src/nintendo/nintendo.html
+++ b/src/nintendo/nintendo.html
@@ -26,10 +26,10 @@
                 <td><a href="Animal Crossing/AnimalCrossing.html"><img src="https://m.media-amazon.com/images/I/71+75r1WyQL.jpg"
                 width=400 height=300></a></td>
                 
-                <td><a href="Super Mario Odyssey/SuperMarioOdyssey.html"><img src=""
+                <td><a href="Super Mario Odyssey/SuperMarioOdyssey.html"><img src="https://fs-prod-cdn.nintendo-europe.com/media/images/10_share_images/games_15/nintendo_switch_4/H2x1_NSwitch_SuperMarioOdyssey_image1600w.jpg"
                 width=400 height=300></a></td>
 
-                <td><a href="The Legend of Zelda/TheLegendofZelda.html"><img src=""
+                <td><a href="The Legend of Zelda/TheLegendofZelda.html"><img src="https://fs-prod-cdn.nintendo-europe.com/media/images/10_share_images/portals_3/SI_Hub_Zelda_Portal_image1600w.jpg"
                 width=400 height=300></a></td>
             </tr>
         </tbody>
