--- a/src/nintendo/Super Mario Odyssey/SuperMarioOdyssey.html
+++ b/src/nintendo/Super Mario Odyssey/SuperMarioOdyssey.html
@@ -28,6 +28,6 @@
      (para lo que será necesario tener un reproductor de música). Estas personalizaciones son puntuadas por la Academia de Artes Decorativas (AAD) todos los domingos.
       Los jugadores tienen la opción de recibir o no recibir cartas de la ADD al inicio del juego, pero una vez que acepta, no se puede revocar esta decisión.
        Desde el lanzamiento de la versión para móviles, se permite a los jugadores conseguir dinero rápidamente.</p>
-<img src="" width="616" height="353">
+<img src="https://i.blogs.es/db8f59/supermarioodyssey/1366_2000.jpg" width="616" height="353">
 </div>
 </body>
