--- a/src/nintendo/The Legend of Zelda/TheLegendofZelda.html
+++ b/src/nintendo/The Legend of Zelda/TheLegendofZelda.html
@@ -19,6 +19,6 @@
     La continuidad cronológica de los juegos ha sido objeto de debate con el transcurso del tiempo, debido a la incertidumbre en la identificación
      de los vínculos entre ciertos títulos. Nintendo publicó la cronología definitiva de The Legend of Zelda en el libro Hyrule Historia (2011), 
      en la cual se explica que existen tres líneas de tiempo diferentes, las cuales dependen primordialmente de Link.</p>
-<img src="" width="616" height="353">
+<img src="https://as01.epimg.net/meristation/imagenes/2021/07/14/reportajes/1626260895_113832_1626297430_noticia_normal.jpg" width="616" height="353">
 </div>
 </body>
