--- a/src/pc/pc.html
+++ b/src/pc/pc.html
@@ -23,13 +23,13 @@
         </thead>
         <tbody>
             <tr>
-                <td><a href="juegos/counter.html"><img src="https://m.media-amazon.com/images/I/71+75r1WyQL.jpg"
+                <td><a href="juegos/counter.html"><img src="..\..\img\csgo.jpg
                 width=400 height=300></a></td>
                 
-                <td><a href="juegos/hell.html"><img src="https://fs-prod-cdn.nintendo-europe.com/media/images/10_share_images/games_15/nintendo_switch_4/H2x1_NSwitch_SuperMarioOdyssey_image1600w.jpg"
+                <td><a href="juegos/hell.html"><img src="..\..\img\hellet.jpg
                 width=400 height=300></a></td>
 
-                <td><a href="juegos/project.html"><img src="https://fs-prod-cdn.nintendo-europe.com/media/images/10_share_images/portals_3/SI_Hub_Zelda_Portal_image1600w.jpg"
+                <td><a href="juegos/project.html"><img src="..\..\img\zomboid.jpg
                 width=400 height=300></a></td>
             </tr>
         </tbody>
