--- a/src/pc/pc.html
+++ b/src/pc/pc.html
@@ -23,14 +23,15 @@
         </thead>
         <tbody>
             <tr>
-                <td><a href="juegos/counter.html"><img src="..\..\img\csgo.jpg
-                width=400 height=300></a></td>
-                
-                <td><a href="juegos/hell.html"><img src="..\..\img\hellet.jpg
-                width=400 height=300></a></td>
+                <td><a href="juegos/counter.html"><img src="..\..\img\csgo.jpg" width="200px"
+                    height="300px"></a></td>
 
-                <td><a href="juegos/project.html"><img src="..\..\img\zomboid.jpg
-                width=400 height=300></a></td>
+                <td><a href="juegos/hell.html"><img src="..\..\img\helllet.jpg" width="500px"
+                    height="300px"></a>
+                </td>
+
+                 <td><a href="juegos/project.html"><img src="..\..\img\zomboid.jpg" width="550px"
+                    height="300px"></a></td>
             </tr>
         </tbody>
     </table>
