--- a/src/pc/pc.html
+++ b/src/pc/pc.html
@@ -16,7 +16,7 @@
         <caption><b>Los juegos con una alta tendencia actualmente</b></caption>
         <thead>
             <tr>
-                <th>Counter-Strike:Global Ofensive</th>
+                <th>Counter-Strike:Global Offensive</th>
                 <th>Hell let Loose</th>
                 <th>Project Zomboid</th>
             </tr>
