--- a/src/pc/juegos/counter.html
+++ b/src/pc/juegos/counter.html
@@ -2,7 +2,7 @@
 <html lang="es-ES">
 <head>
     <meta charset="UTF-8">
-    <tittle>Counter-Strike: Global Offensive</tittle>
+    <title>Counter-Strike </title>
     <link rel="stylesheet" href="..\..\..\estilos\estilos.css">
 </head>
 <body>
